crates/dag-macros/tests/ui/workflow_switch_missing_edge.stderr
error: [DAG206] switch! references missing edge `route` -> `b`
  --> tests/ui/workflow_switch_missing_edge.rs:37:5
   |
37 |     switch!(
   |     ^^^^^^
